--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@nuxt/eslint": "1.10.0",
     "@nuxt/hints": "1.0.0-alpha.1",
     "@nuxt/image": "2.0.0",
@@ -17,10 +18,14 @@
     "@nuxt/test-utils": "3.20.1",
     "@nuxt/ui": "4.2.0",
     "@unhead/vue": "^2.0.3",
+    "drizzle-orm": "^0.44.7",
     "eslint": "^9.0.0",
     "nuxt": "^4.2.1",
     "typescript": "^5.6.3",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.7"
   }
 }
