--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/test-utils": "3.20.1",
     "@nuxt/ui": "4.2.0",
     "@unhead/vue": "^2.0.3",
+    "bcryptjs": "^3.0.3",
     "drizzle-orm": "^0.44.7",
     "eslint": "^9.0.0",
     "nuxt": "^4.2.1",
