--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:generate": "drizzle-kit generate --config=./server/database/drizzle.config.ts",
+    "db:migrate": "drizzle-kit migrate --config=./server/database/drizzle.config.ts"
   },
   "dependencies": {
     "@libsql/client": "^0.15.15",
@@ -19,6 +21,7 @@
     "@nuxt/ui": "4.2.0",
     "@unhead/vue": "^2.0.3",
     "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^12.4.5",
     "drizzle-orm": "^0.44.7",
     "eslint": "^9.0.0",
     "nuxt": "^4.2.1",
