--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nuxt": "^4.2.1",
     "typescript": "^5.6.3",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.7"
