--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "drizzle-orm": "^0.44.7",
     "eslint": "^9.0.0",
     "nuxt": "^4.2.1",
+    "nuxt-auth-utils": "0.5.25",
     "typescript": "^5.6.3",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3",
