--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@nuxt/hints": "1.0.0-alpha.1",
     "@nuxt/image": "2.0.0",
     "@nuxt/scripts": "0.13.0",
-    "@nuxt/test-utils": "3.20.1",
+    "@nuxt/test-utils": "^3.20.1",
     "@nuxt/ui": "4.2.0",
     "@unhead/vue": "^2.0.3",
     "bcryptjs": "^3.0.3",
@@ -32,6 +32,10 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.31.7"
+    "@vue/test-utils": "^2.4.6",
+    "drizzle-kit": "^0.31.7",
+    "happy-dom": "^20.0.10",
+    "playwright-core": "^1.56.1",
+    "vitest": "^4.0.13"
   }
 }
